# LPA_testing_exercises

./: pyproject.toml  setup.cfg
functions/level_3/: one_avg_daily_expenses.py  two_expense_categorizer.py
tests/level_2/: test_five_replace_word.py  test_four_sentiment.py  test_one_median.py  test_three_first.py  test_two_square_equation.py
tests/level_3/: conftest.py  test_calculate_average_daily_expenses.py  test_expense_categorizer.py
