[tool.poetry]
name = "lpa-testing-exercises"
version = "0.1.0"
description = ""
authors = ["Mischa <mishayartsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.0.2"
flake8 = "^6.1.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
